--- a/style.css
+++ b/style.css
@@ -2,9 +2,40 @@ body {
     background-image: url("assets/bg.png");
 }
 
+.pokemon-container {
+    width: 100%;
+    height: 100%;
+}
+
 #pokemon-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 20px;
     padding-inline-start: 0;
+}
+
+.pokemon-item {
+    background-color: beige;
+    list-style: none;
+    padding: 40px;
+    color: #222;
+    text-align: center;
+}
+
+.pokemon-info {
+    text-transform: capitalize;
+    margin-bottom: 0px;
+    font-size: 32px;
+    font-weight: normal;
+}
+
+.pokemon-image {
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+.pokemon-container {
+    margin-top: 5px;
+    color: #666;
+    font-weight: lighter;
 }
